Added missing href:tel

--- a/3/index.html
+++ b/3/index.html
@@ -481,7 +481,7 @@ table{
                       	<h3 class="heading">Contact Info</h3>
                       	<ul>
 					                <li><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-					                <li><span class="text">+2 392 3929 210</span></a></li>
+					                <li><span class="text"><a href="tel:+2 392 3929 210">+2 392 3929 210</span></a></li>
 					              </ul>
                       </td>
                     </tr>
