--- a/1/index.html
+++ b/1/index.html
@@ -122,13 +122,13 @@ img.g-img + div {
 }
 
 .bg_white{
-	background: #ffffff;
+	background: #FFEFD5;
 }
 .bg_light{
 	background: #fafafa;
 }
 .bg_black{
-	background: #000000;
+	background: #191970;
 }
 .bg_dark{
 	background: rgba(0,0,0,.8);
