--- a/12/index.html
+++ b/12/index.html
@@ -363,7 +363,7 @@ ul.social li{
 					  </tr>
 					  <tr>
 					  	<td valign="middle" style="text-align:left; padding: 1em 2.5em;">
-					  		<p><a href="#" class="btn btn-primary">Continur your order</a></p>
+					  		<p><a href="#" class="btn btn-primary">Continue to your order</a></p>
 					  	</td>
 					  </tr>
 	      	</table>
